# semver

./: Cargo.toml  LICENSE
src/: comparator.rs  lib.rs  parsers.rs  serde_impl.rs  version.rs  versionreq.rs
tests/: serde_toml_norm.rs
